--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
+dist: xenial
 language: python
 python:
 - '2.7'
-- '3.3'
 - '3.4'
 - '3.5'
-- 3.5-dev
+- '3.6'
+- '3.7'
+- '3.7-dev'
+- '3.8-dev'
 - nightly
 install: pip install -r requirements.txt
 script: nosetests
